--- a/core/templates/core/components/template_detail_grid.html
+++ b/core/templates/core/components/template_detail_grid.html
@@ -9,6 +9,7 @@
                     <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">ДАНСНЫ НЭР</th>
                     <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">Дебит</th>
                     <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">Кредит</th>
+                    <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">МӨНГӨН ГҮЙЛГЭЭНИЙ МӨР</th>
                     <th class="px-2 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">ҮЙЛДЭЛ</th>
                 </tr>
             </thead>
@@ -27,6 +28,13 @@
                         {% if not detail.IsDebit %}
                             <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">Credit</span>
                         {% else %}-{% endif %}
+                    </td>
+                    <td class="px-2 py-1 text-xs text-gray-900 border-r border-gray-200">
+                        {% if detail.CashFlowId %}
+                            {{ detail.CashFlowId.Description }}
+                        {% else %}
+                            <span class="text-gray-400">-</span>
+                        {% endif %}
                     </td>
                     <td class="px-2 py-1 text-xs text-gray-900">
                         <div class="flex items-center space-x-1">
@@ -49,7 +57,7 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="6" class="px-2 py-1 text-center text-xs text-gray-500">
+                    <td colspan="7" class="px-2 py-1 text-center text-xs text-gray-500">
                         No template details found
                     </td>
                 </tr>
