--- a/core/templates/core/template_detail_form.html
+++ b/core/templates/core/template_detail_form.html
@@ -8,7 +8,7 @@
         <div>
             <h1 class="text-2xl font-bold text-gray-900">{{ title }}</h1>
             <p class="text-gray-600">
-                {% if 'Add' in title %}Загварт шинэ мөр нэмэх{% else %}Загварын мөрийг шинэчлэх{% endif %}
+                {% if 'нэмэх' in title|lower %}Загварт шинэ мөр нэмэх{% else %}Загварын мөрийг шинэчлэх{% endif %}
             </p>
         </div>
         <div class="bg-white shadow sm:rounded-lg">
